# cpp_projects

./: README.md
binary_expression_tree/code/: CMakeLists.txt  binexptree.hpp  main.cpp
finding_euler_circuit/code/: CMakeLists.txt  main.cpp  plan.hpp  woodpecker.hpp
heavyHitters_and_rangeMinMaxQuery_tasks/code/: CMakeLists.txt  heavy_hitters.hpp  main.cpp  rmq.hpp
hyperLogLog/code/: CMakeLists.txt  hyperloglog.hpp  main.cpp  woodpecker_precpp17.hpp
interval_tree/code/interval_tree/: CMakeLists.txt  exceptions.hpp  interval_tree.hpp  main.cpp  woodpecker.hpp
matrix_class/code/: CMakeLists.txt  main.cpp  matrix.hpp  small.txt  small2.txt  small3.txt  small4.txt  woodpecker.hpp
memory_allocator/code/: CMakeLists.txt  dynamicPool.hpp  fixedSizePool.hpp  main.cpp
multilevel_list/: multi_lvl_list_v1_dynamic.hpp  readMe.txt
multilevel_list/Code/: CMakeLists.txt  hw1_main.cpp  multi_lvl_list.hpp  woodpecker.hpp
multilevel_list/description/: description.html
parser_tree_and_stack_queue_tasks/code/: CMakeLists.txt  main.cpp  train.hpp  tree_parser.hpp
